welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: ';' expected but 'else' found.
	else if(litMessage == L)	
        ^BDRBuggle:8: error: ';' expected but 'else' found.
	else if(litMessage == I)	
        ^BDRBuggle:10: error: ';' expected but 'else' found.
	else if(litMessage == A)	
        ^BDRBuggle:12: error: ';' expected but 'else' found.
	else if(litMessage == B)	
        ^BDRBuggle:14: error: ';' expected but 'else' found.
	else if(litMessage == C)	
        ^BDRBuggle:16: error: ';' expected but 'else' found.
	else if(litMessage == Z)	
        ^BDRBuggle:18: error: ';' expected but 'else' found.
	else if(litMessage == Y)	
        ^BDRBuggle:20: error: ';' expected but 'else' found.
	else if(litMessage == X)	
        ^